--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "bcrypt-nodejs": "0.0.3",
         "bluebird": "^3.7.2",
         "body-parser": "^1.19.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.17.3",
         "joi": "^17.6.0",
