--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.17.3",
+        "googleapis": "^100.0.0",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3",
+        "nodemailer": "^6.7.3",
         "sequelize": "^6.17.0",
         "sqlite3": "^5.0.2"
     },
