--- a/kec/package.json
+++ b/kec/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-excel-export": "^0.1.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.2",
     "vuex-router-sync": "^5.0.0"
